# as-convex-as-possible

./: .gitignore  CMakeLists.txt  README.md
Eigen/: README.md
results/armadillo/: armadillo_concave_edges.txt
results/bean/: bean_concave_edges.txt
results/bunny/: bunny_concave_edges.txt
results/cactus/: cactus_concave_edges.txt
results/teapot/: teapot_concave_edges.txt
scripts/: blender_script.py  import_fragments.py  plane_vertices.py
src/: MCTS.cpp  acap.cpp  acap.h  glwidget.cpp  glwidget.h  main.cpp
src/convex-hull/: KDTreeVectorOfVectorsAdaptor.h  MCTS.cpp  MCTS.h  concavity.cpp  concavity.h  convex-hull.cpp  convex-hull.h  cost.cpp  cost.h  costs.cpp  mcts.cpp  mcts.h  nanoflann.h
src/cost/: concavity.cpp  concavity.h  mcts.cpp  mcts.h
src/geom/: mesh.cpp  mesh.h  plane.cpp  plane.h  shapes.cpp  shapes.h  utils.h
src/graphics/: shape.cpp  shape.h
src/mcut/: kernel.cpp  platform.h
src/mcut/internal/: utils.h
src/quickhull/Structs/: Vector3.hpp
src/utils/: rng.cpp  rng.h
